// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`treeMapChart > renders complex content with React components 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1pnrimq1"
      style="height: 537px;"
    >
      <div
        data-testid="treemap-mock"
        style="height: 500px; position: relative; width: 1000px;"
      >
        <div
          data-testid="node.compute"
          style="background: #641cb3; height: 100px; left: 0px; position: absolute; top: 0px; width: 100px;"
        >
          <span>
            compute
          </span>
        </div>
        <div
          data-testid="node.network"
          style="background: #641cb3; height: 100px; left: 100px; position: absolute; top: 0px; width: 100px;"
        >
          <span>
            network
          </span>
        </div>
        <div
          data-testid="node.ai"
          style="background: #641cb3; height: 100px; left: 200px; position: absolute; top: 0px; width: 100px;"
        >
          <span>
            ai
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`treeMapChart > renders correctly with data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1pnrimq1"
      style="height: 537px;"
    >
      <div
        data-testid="treemap-mock"
        style="height: 500px; position: relative; width: 1000px;"
      >
        <div
          data-testid="node.compute"
          style="background: #641cb3; height: 100px; left: 0px; position: absolute; top: 0px; width: 100px;"
        >
          <span>
            Compute
          </span>
        </div>
        <div
          data-testid="node.network"
          style="background: #641cb3; height: 100px; left: 100px; position: absolute; top: 0px; width: 100px;"
        >
          <span>
            Network
          </span>
        </div>
        <div
          data-testid="node.ai"
          style="background: #641cb3; height: 100px; left: 200px; position: absolute; top: 0px; width: 100px;"
        >
          <span>
            AI
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
